fix: Alignment switches CSS tweaks

--- a/inc/customizer/custom-controls/customizer-style.scss
+++ b/inc/customizer/custom-controls/customizer-style.scss
@@ -88,7 +88,7 @@ input[type="text"] {
 /* CSS to show popups without scroll */
 #customize-theme-controls .control-section.open {
     height: 100%;
-    padding: 12px 15px;
+    padding: 12px;
 }
 
 /* Safari Browser specific CSS */
